# VaultX

./: .gitignore  CMakeLists.txt  README.md  vault.db
include/: Crypto.h  Database.h  PasswordManager.h
src/: Crypto.cpp  Database.cpp  PasswordManager.cpp  main.cpp
